--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: SF Pro
+      fonts:
+        - asset: fonts/SF-Pro-Display-Bold.otf
+          style: normal
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
